# week-6-stella-with-universal-types-JustSomeDude2001

./: Makefile  README.md
C++/: CMakeLists.txt  Consts.h  Enums.h  Makefile  MyVisitor.cpp  MyVisitor.h  README.md  StoredType.cpp  StoredType.h  TypeCheck.cpp
C++/Stella/: TestStella
Java/: Makefile  README.md
Java/src/: Interpret.java  Makefile
Java/src/compiler/: Eval.java  TypeCheck.java
Java/src/stella/: AbstractVisitor.java  AllVisitor.java  ComposVisitor.java  FoldVisitor.java  PrettyPrinter.java  Test.java  VisitSkel.java  stellaLexer.java  stellaParser.java  stellaParserBaseListener.java  stellaParserListener.java
Java/src/stella/Absyn/: ABinding.java  AFieldType.java  ALabelledPattern.java  ALocalDecl.java  AMatchCase.java  AParamDecl.java  AProgram.java  ARecordFieldType.java  ATyping.java  AVariantFieldType.java  Abstraction.java  Add.java  AnExtension.java  Annotation.java  Decl.java  (+107 more)
JavaScript/: Makefile  package-lock.json  package.json
JavaScript/src/: interpret.js
JavaScript/src/stella/: stellaLexer.js  stellaParser.interp  stellaParser.js  stellaParserListener.js
OCaml/: Makefile
OCaml/src/: Interpret.ml  TypeCheck.ml
OCaml/src/Stella/: AbsStella.ml  BNFC_Util.ml  LexStella.ml  LexStella.mll  Makefile  ParStella.ml  ParStella.mly  PrintStella.ml  ShowStella.ml  SkelStella.ml  TestStella.ml
Python/: Makefile
Python/src/: interpret.py
Python/src/stella/: stellaLexer.py  stellaParser.g4  stellaParser.interp  stellaParser.py  stellaParser.tokens  stellaParserListener.py
tests/universal-types/well-typed/: universal-types-6.stella
